For to for-loop migration (AOI standard objects)