@@ -30,7 +30,7 @@ public class SceneCamera extends Object3D {
     private double fov, depthOfField, focalDist;
     private double distToPlane = Camera.DEFAULT_DISTANCE_TO_SCREEN;
     private boolean perspective;
-    private ImageFilter filter[];
+    private ImageFilter filters[];
     private int extraComponents;
 
     private static BoundingBox bounds;
@@ -123,7 +123,7 @@ public class SceneCamera extends Object3D {
         depthOfField = Camera.DEFAULT_DISTANCE_TO_SCREEN / 2.0;
         focalDist = Camera.DEFAULT_DISTANCE_TO_SCREEN;
         perspective = true;
-        filter = new ImageFilter[0];
+        filters = new ImageFilter[0];
     }
 
     public double getDistToPlane() {
@@ -170,8 +170,8 @@ public class SceneCamera extends Object3D {
      * Get the list of ImageFilters for this camera.
      */
     public ImageFilter[] getImageFilters() {
-        ImageFilter filt[] = new ImageFilter[filter.length];
-        System.arraycopy(filter, 0, filt, 0, filter.length);
+        ImageFilter filt[] = new ImageFilter[filters.length];
+        System.arraycopy(filters, 0, filt, 0, filters.length);
         return filt;
     }
 
@@ -179,7 +179,7 @@ public class SceneCamera extends Object3D {
      * Set the list of ImageFilters for this camera.
      */
     public void setImageFilters(ImageFilter filters[]) {
-        filter = filters;
+        filters = filters;
     }
 
     /**
@@ -207,8 +207,8 @@ public class SceneCamera extends Object3D {
      */
     public int getComponentsForFilters() {
         int components = extraComponents;
-        for (int i = 0; i < filter.length; i++) {
-            components |= filter[i].getDesiredComponents();
+        for (ImageFilter filter: filters) {
+            components |= filter.getDesiredComponents();
         }
         return components;
     }
@@ -221,8 +221,8 @@ public class SceneCamera extends Object3D {
      * @param coords the position of this camera in the scene
      */
     public void applyImageFilters(ComplexImage image, Scene scene, CoordinateSystem coords) {
-        for (int i = 0; i < filter.length; i++) {
-            filter[i].filterImage(image, scene, this, coords);
+        for (ImageFilter filter: filters) {
+            filter.filterImage(image, scene, this, coords);
         }
         image.rebuildImage();
     }
@@ -298,9 +298,9 @@ public class SceneCamera extends Object3D {
         sc.depthOfField = depthOfField;
         sc.focalDist = focalDist;
         sc.perspective = perspective;
-        sc.filter = new ImageFilter[filter.length];
-        for (int i = 0; i < filter.length; i++) {
-            sc.filter[i] = filter[i].duplicate();
+        sc.filters = new ImageFilter[filters.length];
+        for (int i = 0; i < filters.length; i++) {
+            sc.filters[i] = filters[i].duplicate();
         }
         return sc;
     }
@@ -314,9 +314,9 @@ public class SceneCamera extends Object3D {
         depthOfField = sc.depthOfField;
         focalDist = sc.focalDist;
         perspective = sc.perspective;
-        filter = new ImageFilter[sc.filter.length];
-        for (int i = 0; i < filter.length; i++) {
-            filter[i] = sc.filter[i].duplicate();
+        filters = new ImageFilter[sc.filters.length];
+        for (int i = 0; i < filters.length; i++) {
+            filters[i] = sc.filters[i].duplicate();
         }
     }
 
@@ -413,7 +413,7 @@ public class SceneCamera extends Object3D {
                 temp.depthOfField = dofField.getValue();
                 temp.focalDist = fdField.getValue();
                 new CameraFilterDialog(UIUtilities.findWindow(fovSlider), parent.getScene(), temp, info.getCoords());
-                filter = temp.filter;
+                filters = temp.filters;
             }
         }, "processEvent");
         ComponentsDialog dlg = new ComponentsDialog(parent.getFrame(), Translate.text("editCameraTitle"),
@@ -440,16 +440,16 @@ public class SceneCamera extends Object3D {
 
                         PoseTrack pose = (PoseTrack) obj.getTracks()[j];
                         Track old[] = pose.getSubtracks();
-                        Track newtracks[] = new Track[filter.length];
-                        for (int k = 0; k < filter.length; k++) {
+                        Track newtracks[] = new Track[filters.length];
+                        for (int k = 0; k < filters.length; k++) {
                             Track existing = null;
                             for (int m = 0; m < old.length && existing == null; m++) {
-                                if (old[m] instanceof FilterParameterTrack && ((FilterParameterTrack) old[m]).getFilter() == filter[k]) {
+                                if (old[m] instanceof FilterParameterTrack && ((FilterParameterTrack) old[m]).getFilter() == filters[k]) {
                                     existing = old[m];
                                 }
                             }
                             if (existing == null) {
-                                existing = new FilterParameterTrack(pose, filter[k]);
+                                existing = new FilterParameterTrack(pose, filters[k]);
                             }
                             newtracks[k] = existing;
                         }
@@ -486,14 +486,14 @@ public class SceneCamera extends Object3D {
             perspective = in.readBoolean();
         }
         if (version == 0) {
-            filter = new ImageFilter[0];
+            filters = new ImageFilter[0];
         } else {
-            filter = new ImageFilter[in.readInt()];
+            filters = new ImageFilter[in.readInt()];
             try {
-                for (int i = 0; i < filter.length; i++) {
+                for (int i = 0; i < filters.length; i++) {
                     Class<?> cls = ArtOfIllusion.getClass(in.readUTF());
-                    filter[i] = (ImageFilter) cls.newInstance();
-                    filter[i].initFromStream(in, theScene);
+                    filters[i] = (ImageFilter) cls.getDeclaredConstructor().newInstance();
+                    filters[i].initFromStream(in, theScene);
                 }
             } catch (Exception ex) {
                 ex.printStackTrace();
@@ -512,10 +512,10 @@ public class SceneCamera extends Object3D {
         out.writeDouble(depthOfField);
         out.writeDouble(focalDist);
         out.writeBoolean(perspective);
-        out.writeInt(filter.length);
-        for (int i = 0; i < filter.length; i++) {
-            out.writeUTF(filter[i].getClass().getName());
-            filter[i].writeToStream(out, theScene);
+        out.writeInt(filters.length);
+        for (ImageFilter filter : filters) {
+            out.writeUTF(filter.getClass().getName());
+            filter.writeToStream(out, theScene);
         }
     }
 
@@ -577,9 +577,9 @@ public class SceneCamera extends Object3D {
         track.setGraphableValues(new String[]{"Field of View", "Depth of Field", "Focal Distance"},
                 new double[]{fov, depthOfField, focalDist},
                 new double[][]{{0.0, 180.0}, {0.0, Double.MAX_VALUE}, {0.0, Double.MAX_VALUE}});
-        FilterParameterTrack subtrack[] = new FilterParameterTrack[filter.length];
+        FilterParameterTrack subtrack[] = new FilterParameterTrack[filters.length];
         for (int i = 0; i < subtrack.length; i++) {
-            subtrack[i] = new FilterParameterTrack(track, filter[i]);
+            subtrack[i] = new FilterParameterTrack(track, filters[i]);
         }
         track.setSubtracks(subtrack);
     }
